--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
 
     <%= yield %>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAvg-9Ne_jyWCk9Q7_lxLSR6uz6maObk4&callback=myMap"></script>
 
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAvg-9Ne_jyWCk9Q7_lxLSR6uz6maObk4&callback=myMap"></script> -->
 </html>
 
