--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -2,6 +2,8 @@
 //= require leaflet
 //= require leaflet.map
 
+
+// ancienne fonction pour generer la map google.maps
 /* var map;
 function myMap() {
   var mapProp= {
@@ -12,6 +14,8 @@ function myMap() {
   map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 }
  */
+
+// fonction pour les inputs
 /*
 let verif = function() {
 
@@ -32,7 +36,6 @@ let verif = function() {
   }
 }
 
-
 let index = 0;
 let ids = ['latitude', 'longitude', 'message', 'bouton'];
 let type = ['input', 'input', 'input' , 'button'];
@@ -52,6 +55,7 @@ $(c).appendTo($(a))
   .height('400px')
   .width('80%')
   .position('relative')
+
 
 while (index < ids.length)
 {
@@ -85,19 +89,24 @@ $('#bouton:eq(0)').click(function() {
   }
 });
 
+*/
+
+// musée du 1er call ajax
+
+
 c = document.createElement('button');
 $(c).appendTo($('body'))
   .click(function() {
-    console.log("ta fonction marche");
-    $.ajax({url: "/", type: 'POST', data: 'lat=' + map.getCenter().lat() + "&long=" + map.getCenter().lng() + "&r=" + 500, dataType: 'JSON', body: 'caca', complete: ( function(data) {
+    bound = mymap.getBounds(); 
+    $.ajax({url: "/", type: 'POST', data: 'Nlat=' + bound.getNorthEast().lat + "&Nlong=" + bound.getNorthWest().lng + "&Slat=" + bound.getSouthEast().lat + "&Slong=" + bound.getSouthWest()  , dataType: 'JSON', body: 'caca', complete: ( function(data) {
       let place;
-      for (let local of data.responseJSON.caca) {
-       place = new google.maps.LatLng(local.latitude, local.longitude);
-        let marker = new google.maps.Marker({position: place});
-        marker.setMap(map);
-      };
-      map.setCenter({lat: data.responseJSON.caca[0].longitude, lng: data.responseJSON.caca[0].latitude });
+   //    for (let local of data.responseJSON.caca) {
+        place = new L.latLng(bound.getNorthEast().lat, bound.getNorthWest().lng);
+        let myIcon = L.icon({ iconUrl: '//app/assets/images/boutique.png', iconSize: [38, 95],  iconAnchor: [22, 94],});
+        let marker = new L.Marker(place, {icon: myIcon});
+        marker.addTo(mymap);
+   //  };
+   //   map.setCenter({lat: data.responseJSON.caca[0].longitude, lng: data.responseJSON.caca[0].latitude });
     })
     });})
   .attr('id', 'coucou')
-*/
