--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
     <%= yield %>
 
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCAvg-9Ne_jyWCk9Q7_lxLSR6uz6maObk4&callback=myMap"></script> -->
+    <%= javascript_include_tag 'map' %>
+
 </html>
 
