rien a changé jcrois

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -89,7 +89,8 @@ $('#bouton:eq(0)').click(function() {
 });
 
 */
-
+/* ----------------------------------------------------------------- */
+// Cree la map 
 let container = $('#mapid:eq(0)')
 let mymap = L.map('mapid').setView([51.505, -0.09], 13);
 
@@ -100,18 +101,16 @@ let layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?ac
   id: 'mapbox.streets',
   accessToken: 'pk.eyJ1IjoiYmZyYWlraW4iLCJhIjoiY2podWxwc21pMG5udjNqdDZpZGluaGhxeSJ9.WaMLYylJhk6ULiaGSWNuAA',
 }).addTo(mymap);
-
+/* -------------------------------------------------------------------   */
 
 // musée du 1er call ajax
-
 c = document.createElement('button');
 $(c).appendTo($('body'))
   .click(function() {
     bound = mymap.getBounds(); 
-    $.ajax({url: "/", type: 'POST', data: 'Nlat=' + bound.getNorthEast().lat + "&Nlong=" + bound.getNorthWest().lng + "&Slat=" + bound.getSouthEast().lat + "&Slong=" + bound.getSouthWest()  , dataType: 'JSON', body: 'caca', complete: ( function(data) {
+    $.ajax({url: "/", type: 'POST', data: 'Nlat=' + bound.getNorthEast().lat + "&Nlong=" + bound.getNorthWest().lng + "&Slat=" + bound.getSouthEast().lat + "&Slong=" + bound.getSouthWest().lng  , dataType: 'JSON', body: 'caca', complete: ( function(data) {
       let place;
       //    for (let local of data.responseJSON.caca) {
-
       place = new L.latLng(bound.getNorthEast().lat, bound.getNorthWest().lng);
       let myIcon = new L.icon({ iconUrl: '//app/assets/images/boutique.jpg', iconSize: [38, 40],  iconAnchor: [22, 94] });
       let marker = new L.Marker(place, {icon: myIcon, autoPan: true}).addTo(mymap);
