--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -13,6 +13,7 @@ let layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?ac
 }).addTo(mymap);
 /* -------------------------------------------------------------------   */
 
+
 // musée du 1er call ajax
 c = document.createElement('button');
 $(c).appendTo($('body'))
@@ -22,8 +23,8 @@ $(c).appendTo($('body'))
       let place;
       //    for (let local of data.responseJSON.caca) {
       place = new L.latLng(bound.getNorthEast().lat, bound.getNorthWest().lng);
-      let myIcon = new L.icon({ iconUrl: '//app/assets/images/Dogepic.png' , iconSize: [38, 40],  iconAnchor: [22, 94] });
-      let marker = new L.Marker(place, {icon: myIcon, autoPan: true}).addTo(mymap);
+      let myIcon = new L.icon({ iconUrl: '//app/assets/images/Dogepic.png' , iconSize: [38, 40] });
+      let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
       marker.addTo(mymap);
       mymap.setView(place, 15 ,{pan: {animate: true}});
       //  };
