--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -22,7 +22,7 @@ height:800px;
 margin-top: -20px;
 }
 .leaflet-top .leaflet-control {
-  margin-top: 100px;
+  margin-top: 100px!important;
   margin-left:20px;
 }
 /*******************************/
@@ -31,7 +31,7 @@ margin-top: -20px;
 @media screen and (min-width: 0px) and (max-width: 800px) {
   #mapid { margin-top:-20px; }  /* show it on small screens */
   .leaflet-top .leaflet-control {
-    margin-top: 20px;
+    margin-top:40px!important;
   }
 }
 
