--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,6 +1,7 @@
 
 <%= render 'layouts/navbar'%>
 
+<div class="add"><i class="fa fa-plus"></i></div>
 
 <div id='mapid'></div>
 <%= javascript_include_tag "map" %>
