--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -20,6 +20,6 @@ $main-color:rgba(102, 51, 153,1);
         margin-left: 10px;
     }
     @media screen and (min-width: 0px) and (min-width: 800px) {
-        margin-top:-20px; }  /* show it on small screens */
+        margin-top:-20px;   /* show it on small screens */
       }
   }
