--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -20,10 +20,12 @@ li {
 width:100%;
 height:800px;
 margin-top: -20px;
+position: relative;
 }
 .leaflet-top .leaflet-control {
   margin-top: 100px!important;
   margin-left:20px;
+  position:fixed;
 }
 /*******************************/
 /* MEDIA QUERIES */
