--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -10,6 +10,7 @@
     Description de la boutique : <%= text_field :description, placeholder: "placeholder text" %><br>
     Adresse de la boutique : <%= text_field :adress, placeholder: "placeholder text" %><br>
     <%= submit_tag("Search") %>
+    <button class="add_places">J'y suis</button>
 
   </div>
 </div>
