--- a/app/assets/javascripts/place.js.erb
+++ b/app/assets/javascripts/place.js.erb
@@ -1,12 +1,8 @@
 // Place all the behaviors and hooks related to the matching controller here.
 // All this logic will automatically be available in application.js.
 
-l = document.createElement('ul');
-li = document.createElement('li');
-$(l).appendTo($('body'))
-$(li).appendTo($(l))
-a = document.createElement('button');
-$(a).click(function() {
+
+$(".add_places").click(function() {
   center = mymap.getCenter();
   $.ajax({url: "/add_place", type: 'POST', data: 'lati=' + center.lat + "&long=" + center.lng   , dataType: 'JSON', body: 'rendu', complete: ( function(data) {
     let local = data.responseJSON.rendu
@@ -15,8 +11,7 @@ $(a).click(function() {
     let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
     marker.addTo(mymap);
   })
-  });})
-  .appendTo($(li));
+  });});
 
 
 
