--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -26,6 +26,7 @@ $main-color:rgba(102, 51, 153,1);
 .add_places{
     padding:5px;
 }
+/* Button Submit */
 input[type=submit] {
     border: none;
     font-size: 18px;
@@ -62,7 +63,7 @@ input[type=submit] {
      }  
   }
 /*******************************/
-        /* MODALS */
+        /* Inputs */
 /*******************************/
 input[type=email] {
 }
