ajout layouts fonts selma

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="page">
   <%= image_tag("photos/purple(1).png") %>
-  <div class="user_form">
+  <div class="user_signup">
     <h2>URBAN EMPORIUM</h2>
     <h4><i>Connectez-vous pour commencer</i></h4>
 
