--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -79,6 +79,12 @@ input[type=password] {
     border-bottom-style:ridge;
     border-color: rgba(102, 51, 153, 0.8);
 }
+input[type=text-field] {
+    border: none;
+    border-width:1px;  
+    border-bottom-style:ridge;
+    border-color: rgba(102, 51, 153, 0.8);
+}
 // Supprime le border highlight
 *:focus {
     outline: none;
@@ -89,6 +95,8 @@ input[type=password] {
 /*******************************/
 
 h2{
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
 }
 
 
