--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -16,15 +16,17 @@
     position: absolute;   
   }
 
-.user_form{
+.user_signup{
     display: inline-block;
     position: fixed;
     padding: 5px;
     text-align: center;
     box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.29);
-    border-radius: 5px;
-    color:white;
+    border-radius: 3px;
+    color:purple;
     padding-bottom: 60px!important;
+    background-color:white;
+    margin-top: 60px;
     h2{
         margin-bottom: -10px;
     }
@@ -32,14 +34,20 @@
         padding-bottom:100px;
     }
 
+   
     
 }
 @media screen and (min-width: 0px) and (max-width: 800px) {
-    .user_form{ 
+    .user_signup{ 
         
-        width:100%!important;
+        width:auto;
         padding: 0;
-        padding-bottom: 2220px!important;
+        padding-bottom: 20px!important;
+        margin-right: 20px;
+        margin-left: 25px;
+        padding-left: 40px;
+        padding-right: 40px;
+
         
     
     }  
