--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -29,3 +29,19 @@ let layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?ac
   })
   });});
 
+// quand la map arrête de bouger
+
+ mymap.on('moveend', function() {
+  bound = mymap.getBounds();
+  console.log(bound);
+  $.ajax({url: "/", type: 'POST', data: 'Nlat=' + bound.getNorth() + "&Nlong=" + bound.getWest() + "&Slat=" + bound.getSouth() + "&Slong=" + bound.getEast() + '&test1=' + mymap.getCenter().lat + '&test2=' + mymap.getCenter().lng  , dataType: 'JSON', body: 'caca', complete: ( function(data) {
+    for (let local of data.responseJSON.caca) {
+      console.log(local);
+      let place = new L.latLng(local.latitude, local.longitude);
+      let myIcon = new L.icon({ iconUrl: "<%= asset_path("douge.png") %>" , iconSize: [45, 50] });
+      let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
+      marker.addTo(mymap);
+    }
+  })
+  });});
+
