--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -14,41 +14,53 @@
 
   .page img {
     position: absolute;   
+    min-width: 100%;
+    min-height: 100%;
   }
 
-.user_signup{
+  .remember_me{
+      input{
+          width: 20px;
+          height:13px;
+      }
+      
+  }
+  /* DIV qui englobe les formulaire sign in et sign up */
+.form_connection{
     display: inline-block;
     position: fixed;
     padding: 5px;
     text-align: center;
     box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.29);
     border-radius: 3px;
-    color:purple;
     padding-bottom: 60px!important;
-    background-color:white;
-    margin-top: 60px;
+    background-color:rgba(255, 255, 255, 1);
+    color:#535c68;
+    margin-top: 50px;
+    width: 40%;
+    margin-left: 30%;
     h2{
         margin-bottom: -10px;
     }
     h4{
-        padding-bottom:100px;
+        padding-bottom:30px;
     }
 
    
     
 }
 @media screen and (min-width: 0px) and (max-width: 800px) {
-    .user_signup{ 
+    .form_connection{ 
         
         width:auto;
         padding: 0;
         padding-bottom: 20px!important;
-        margin-right: 20px;
-        margin-left: 25px;
-        padding-left: 40px;
-        padding-right: 40px;
+        margin-left: 3%;
+        width: 95%;
+    }
 
         
     
-    }  
+
+
   }
