--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,10 @@
-<h2>Forgot your password?</h2>
+<%= render 'layouts/navbar'%>
+<div class="page">
+  <%= image_tag("photos/purple(2).jpg") %>
+  <div class="form_connection">
+  <h2>Mot de passe oublié ?</h2>
+<h4><i>Réinitialiser mon mot de passe par mail :</i></h4>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,8 +15,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Nouveau mot de passe" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
+</div>
+</div>
