Mdr j'était encore sur master pardon - Ajout d'une animation sous les link navbar pc

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,9 @@
 <div class="navbar" id="navbar">
 
-  <li><a href="#home">Profil</a>
-  <li><a href="#news">Map</a>
-  <li><a href="#contact">Liste</a>
-  <li><a href="#about">Paramètres <i class="fa fa-plus-circle"></i></a>
+  <li><a href="#home">PROFIL <i class="fa fa-user"></i></a>
+  <li><a href="#news">CARTE <i class="fa fa-map"></i></a>
+  <li><a href="#contact">LISTE <i class="fa fa-list"></i></a>
+  <li><a href="#about">PARAMÈTRES <i class="fa fa-cog"></i></a>
 
 </div>
 
@@ -15,3 +15,6 @@
   <li><a href="#about"><i class="fa fa-cog"></i></a>
 
 </div>
+<style>
+
+</style>
