--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -25,13 +25,33 @@ $main-color-opacity:rgba(102, 51, 153,0.8);
         padding: 10px 14px;
         text-decoration: none;
         font-size: 18px;
-
+        position: relative;
+        /* ANIMATION UNDER LINK NAVBAR */
+         &:hover {
+          color: orange;
+        }
+        &:before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          bottom: 0;
+          left: 0;
+          background-color: orange;
+          visibility: hidden;
+          -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+          -webkit-transition: all 0.3s ease-in-out 0s;
+          transition: all 0.3s ease-in-out 0s;
+        }
+        &:hover:before {
+          visibility: visible;
+          -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+        }
 
       }
-       a:hover {
-        background-color: #ddd;
-        color: black;
-      }
+      
       a.active {
         background-color: #4CAF50;
         color: white;
@@ -39,7 +59,9 @@ $main-color-opacity:rgba(102, 51, 153,0.8);
       .icon {
         display: block;
       }
+      
 }
+
 /*******************************/
 /* VERSION MOBILE DE LA NAVBAR */
 /*******************************/
