--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -45,3 +45,8 @@ let layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?ac
   })
   });});
 
+
+
+mymap.on('viewreset', function(ev) {
+    alert(ev.latlng); 
+});
