--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,18 +1,18 @@
 <div class="navbar" id="navbar">
 
-  <li><a href="#home">PROFIL <i class="fa fa-user"></i></a>
-  <li><a href="#news">CARTE <i class="fa fa-map"></i></a>
-  <li><a href="#contact">LISTE <i class="fa fa-list"></i></a>
-  <li><a href="#about">PARAMÈTRES <i class="fa fa-cog"></i></a>
+  <li><a href="#">PROFIL <i class="fa fa-user"></i></a>
+  <li><a href="#">CARTE <i class="fa fa-map"></i></a>
+  <li><a href="#">LISTE <i class="fa fa-list"></i></a>
+  <li><a href="#">PARAMÈTRES <i class="fa fa-cog"></i></a>
 
 </div>
 
 <div class="navbar-mobile" id="navbar">
   
-  <li><a href="#home"><i class="fa fa-user"></i></a>
-  <li><a href="#news"><i class="fa fa-map"></i></a>
-  <li><a href="#contact"><i class="fa fa-list"></i></a>
-  <li><a href="#about"><i class="fa fa-cog"></i></a>
+  <li><a href="#" onclick="openNav()"><i class="fa fa-user"></i></a>
+  <li><a href="#"><i class="fa fa-map"></i></a>
+  <li><a href="#"><i class="fa fa-list"></i></a>
+  <li><a href="#"><i class="fa fa-cog"></i></a>
 
 </div>
 <style>
