--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -8,7 +8,7 @@ $main-color:rgba(102, 51, 153,1);
     width: 50px;
     background-color:$main-color ;
     border-radius: 50%;
-    z-index: 10000;
+    z-index: 3;
     right: 15px;
     position: fixed;
     margin-top: 50px;
@@ -81,6 +81,16 @@ input[type=submit] {
         height: 300px;
      }  
   }
+.user-menu
+{
+    width:100%;
+    height:100%;
+    background-color:rgba(47, 18, 76, 0.9);
+    z-index:5;
+    top:0;
+    position: absolute;
+
+}
 /*******************************/
         /* Inputs */
 /*******************************/
