--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -21,6 +21,8 @@ width:100%;
 height:800px;
 margin-top: -20px;
 position: relative;
+z-index:1;
+
 }
 .leaflet-top .leaflet-control {
   margin-top: 100px!important;
