--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -3,7 +3,7 @@
 <!-- bouton add -->
 <button class="add" onclick="toggleModal()"><i class="fa fa-plus"></i></button>
 
-<!-- Fenêtre modale -->
+<!-- DEBUT FENETRE MODALE -->
 <div id="modal-add-shop" style="display:none;">
   <div class="form-modale">
     Nom de la boutique :<%= text_field :name, placeholder: "Nom de la boutique" %><br>
@@ -14,6 +14,8 @@
 
   </div>
 </div>
+<!-- FIN DE LA FENETRE MODALE -->
+
 
 <div id='mapid'></div>
 
