Wallah c'est pas Paul + ajout menu

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,15 +1,16 @@
 <div class="navbar" id="navbar">
 
-  <li><a href="#">PROFIL <i class="fa fa-user"></i></a>
+  <li><a onclick="toggleUserMenu()">PROFIL <i class="fa fa-user"></i></a>
   <li><a href="#">CARTE <i class="fa fa-map"></i></a>
   <li><a href="#">LISTE <i class="fa fa-list"></i></a>
   <li><a href="#">PARAMÈTRES <i class="fa fa-cog"></i></a>
+
 
 </div>
 
 <div class="navbar-mobile" id="navbar">
   
-  <li><a href="#" onclick="openNav()"><i class="fa fa-user"></i></a>
+  <li><a onclick="toggleUserMenu()"><i class="fa fa-user"></i></a>
   <li><a href="#"><i class="fa fa-map"></i></a>
   <li><a href="#"><i class="fa fa-list"></i></a>
   <li><a href="#"><i class="fa fa-cog"></i></a>
