--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= image_tag("photos/purple(2).jpg") %>
   <div class="form_connection">
     <h2>URBAN EMPORIUM</h2>
-    <h4><i>Inscrivez-vous pour commencer</i></h4>
+    <h4><i>Bienvenue ! Inscrivez-vous pour commencer.</i></h4>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
