--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,11 +9,19 @@
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
+
+    <div class="field">
+       <%= f.label :username, "Nom d'utilisateur" %><br />
+       <%= f.text_field :username, autofocus: true, autocomplete: "Nom", placeholder: "Votre nom" %>    
+     </div>
+     <br>
+
       <div class="field">
         <%= f.label :EMAIL.capitalize %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" , placeholder: "Votre e-mail"%>
       </div>
-      <br>      
+      <br>  
+
       <div class="field">
         <%= f.label :MOT_DE_PASSE %>
         <% if @minimum_password_length %>
