ajout du menu settings + reglage animations js

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -95,11 +95,10 @@ $main-color-opacity:rgba(102, 51, 153,0.8);
 
       }
        a:hover {
-        background-color: #ddd;
-        color: black;
+       color: darkorange;;
       }
       a.active {
-        background-color: #4CAF50;
+        
         color: white;
       }
       .icon {
