--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar" id="navbar">
 
   <li><a onclick="toggleUserMenu()">PROFIL <i class="fa fa-user"></i></a>
-  <li><a href="#">CARTE <i class="fa fa-map"></i></a>
+  <li><a href="<%=root_path%>">CARTE <i class="fa fa-map"></i></a>
   <li><a href="#">LISTE <i class="fa fa-list"></i></a>
   <li><a href="#">PARAMÈTRES <i class="fa fa-cog"></i></a>
 
@@ -11,9 +11,9 @@
 <div class="navbar-mobile" id="navbar">
   
   <li><a onclick="toggleUserMenu()"><i class="fa fa-user"></i></a>
-  <li><a href="#"><i class="fa fa-map"></i></a>
+  <li><a href="<%=root_path%>"><i class="fa fa-map"></i></a>
   <li><a href="#"><i class="fa fa-list"></i></a>
-  <li><a href="#"><i class="fa fa-cog"></i></a>
+  <li><a onclick="toggleSettingsMenu()"><i class="fa fa-cog"></i></a>
 
 </div>
 <style>
