--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,11 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+ 
+ <div class="field">
+       <%= f.label :Pseudo %><br />
+       <%= f.text_field :username, autofocus: true, autocomplete: "Pseudo"%>   
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
