--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -64,15 +64,31 @@ input[type=submit] {
     border-radius: 10px;
     margin-top: 150px;
     margin-left: 4px;
-    height: 250px;
+    //height: 250px;
     max-width: 100%;
     min-width: 98%;
     z-index: 10000;
     -webkit-box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
     -moz-box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
     box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
+        /*  jordane*/
+        color:rgba(47, 18, 76, 0.9);
+        display: block;
+        padding-top: 30px;
+        text-align: center;
     
 }
+
+    textarea{
+        height: 25px;
+        border: none;
+        border-width:1px;  
+        border-bottom-style:ridge;
+        border-color: $main-color;
+        width:80%;
+        margin-bottom: 20px;
+    }
+
 @media screen and (min-width: 801px) {
     #modal-add-shop { 
         min-width:800px!important;
