recuperation de leurs taff

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -8,7 +8,7 @@
   <div class="form-modale">
     Nom de la boutique :<%= text_field :name, placeholder: "Nom de la boutique" %><br>
     Description de la boutique : <%= text_area :description, placeholder: "Description" %><br>
-    Adresse de la boutique : <%= text_field :adress, placeholder: "Adresse" %><br>
+    Adresse de la boutique : <%= text_field_tag :adress, placeholder: "Adresse" %><br>
     <%= submit_tag("Search") %>
     <button class="add_places">J'y suis</button>
 
